GUI now sends data to app state. More design. More disclaimer. Link to Repo in footer.

--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,12 @@ h1, p {
 }
 .inputWindow{
   text-align: center;
-}
+  }
+
 .middleWindow{
+  text-align: center;
+}
+.footer{
   text-align: center;
 }
 .App > * {
